# SMARTHOME

./: .gitignore  README.md  docker-compose.yml
OnBoard/BEDROOM_STM32F1/: .cproject  .project  BEDROOM_STM32F1 Debug.launch
OnBoard/BEDROOM_STM32F1/App/Inc/: app_main.h  system_manager.h
OnBoard/BEDROOM_STM32F1/App/Src/: app_main.c  auto_mode.c  manual_mode.c  system_manager.c
OnBoard/BEDROOM_STM32F1/BSW/Inc/: globals.h  interrupts.h
OnBoard/BEDROOM_STM32F1/BSW/Src/: interrupts.c
OnBoard/BEDROOM_STM32F1/Drivers/Inc/: stm32_gpio.h
OnBoard/BEDROOM_STM32F1/Drivers/Src/: stm32_gpio.c
OnBoard/BEDROOM_STM32F1/tools/Inc/: message.h  ndd_std_types.h
OnHost/LIVINGROOM_ESP32/: CMakeLists.txt  sdkconfig  sdkconfig.old
OnHost/LIVINGROOM_ESP32/common/mqtt_client/: CMakeLists.txt  nddmqtt_client.c  nddmqtt_client.h
OnHost/LIVINGROOM_ESP32/common/wifi_config/: CMakeLists.txt  web_config.c  web_config.h  wifi_config.c  wifi_config.h
OnHost/LIVINGROOM_ESP32/html/: webserver.html
OnHost/LIVINGROOM_ESP32/main/: CMakeLists.txt  adc_shared.c  adc_shared.h  app_com_uart.c  app_com_uart.h  app_main.c  buzzer.c  buzzer.h  dht11.c  dht11.h  door.c  door.h  fsm_message.c  idf_component.yml  ldr.c  ldr.h  led.c  led.h  living_handle.c  living_handle.h  message.c  message.h  mq2.c  mq2.h  ndd_std_types.h  queue.c  queue.h  rain.c  rain.h  rfid.c  rfid.h  sg90.c  sg90.h
nodered_data/: .config.nodes.json  .config.runtime.json.backup  .config.users.json.backup  .flows.json.backup  .flows_cred.json.backup  flows.json  package-lock.json  package.json
(+41 files in other folders)
